nodes on the stage don't overlap and show IDs